--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <head>
         <!-- add a title -->
         <title> Charles Bao </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style/style.css">
     </head>
 
     <body> <!-- PUT CONTENT HERE -->
-        <h1 class="green" id="center">
+        <h1 class="black" id="center">
             Charles Bao
         </h1>
         <div> </div>
         <p id="center" class="para">
-            My name is Charles Bao and I'm a 2nd year CS student at UCSB
+            Hi, my name is Charles Bao and I'm a 2nd year CS student at UCSB
         </p>
         <img id="imageCenter" src = Charles.jpg>
         <p id="center">
