--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 
-<!-- exercise_1.html -->
-
-<!-- HTML Element Reference https://www.w3schools.com/tags/ref_byfunc.asp -->
-<!-- CSS Property Reference https://www.w3schools.com/cssref/default.asp -->
-
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- add a title -->
         <title> Charles Bao </title>
         <link rel="stylesheet" href="style/style.css">
     </head>
@@ -22,7 +16,7 @@
         </p>
         <img id="imageCenter" src = Charles.jpg>
         <p id="center">
-            ^thats me
+            <a href="/about/index.html">About met</a>
         </p>
     </body>
 
