--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <p id="center" class="para">
             Hi, my name is Charles Bao and I'm a 2nd year CS student at UCSB
         </p>
+        <div> </div>
         <img id="imageCenter" src = Charles.jpg>
         <p id="center">
-            <a href="/about/index.html">About met</a>
+            <a href="/about/index.html">About me</a>
         </p>
     </body>
 
