--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> About Me </title>
-        <link rel="stylesheet" href="chucklesbao.github.io/style/about.css">
+        <link rel="stylesheet" href="../style/about.css">
     </head>
     <h1 class="black" id="center">
         About Me
