--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </h1>
         <div> </div>
         <p id="center" class="para">
-            Hi, my name is Charles Bao and I'm a 2nd year CS student at UCSB
+            Hi, my name is Charles Bao and I'm a 2nd year CS student at UCSB!
         </p>
 
         <img id="imageCenter" src = Charles.jpg>
