--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
             Charles Bao
         </h1>
         <div> </div>
-        <p id="center" class="para">
-            Hi, my name is Charles Bao and I'm a 2nd year CS student at UCSB!
-        </p>
-
         <img id="imageCenter" src = Charles.jpg>
+        <p id="center" class="para">
+            Hi, my name is Charles Bao and I'm a 2nd year CS student at UCSB
+        </p>
         <p id="center">
             <a href="/about/index.html">About me</a>
         </p>
