changned index and style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div> </div>
         <img id="imageCenter" src = Charles.jpg>
         <p id="center" class="para">
-            Hi, my name is Charles Bao and I'm a 2nd year CS student at UCSB!
+            Hi, my name is Charles Bao and I'm a 2nd year CS student at UCSB
         </p>
         <p id="center">
             <a href="/about/index.html">About me</a>
