--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <head>
         <title> Charles Bao </title>
         <link rel="stylesheet" href="style/style.css">
+        <script src = "scripts/home.js"></script>
     </head>
 
     <body> <!-- PUT CONTENT HERE -->
-        <h1 class="black" id="center">
+        <h1 class="black center">
             Charles Bao
         </h1>
         <div> </div>
-        <img id="imageCenter" src = Charles.jpg>
-        <p id="center" class="para">
-            Hi, my name is Charles Bao and I'm a 2nd year CS student at UCSB
+        <button onclick="buttonPressed(this)" value = "This is me in my Junior Year!">
+            <img id="imageCenter" src = Charles.jpg>
+        </button>
+        <p class="para center">
+            Hi, my name is Charles Bao and this website will let you about me.
         </p>
-        <p id="center">
-            <a href="/about/index.html">About me</a>
+        <p class="center">
+            <a href="about/index.html">About me</a>
         </p>
     </body>
 
