--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,20 @@
         <title> About Me </title>
         <link rel="stylesheet" href="../style/about.css">
     </head>
-    <h1 class="black" id="center">
+    <h1 class="black center">
         About Me
     </h1>
+    <h2 class = "black center"> Education</h2>
+    <p class="para center">
+        I'm currently in my second year of studying computer science at The University of California Santa Barbara.
+    </p>
+    <h6 class = "black center">
+        Relevant courses:
+    </h6>
+    <ul class="black center">
+        <li>Object Oriented Design and Implementation</li>
+        <li>Foundations of Computer Science</li>
+        <li>Computer Organization and Logic Design</li>
+        <li>Data Structures and Algorithms</li>
+    </ul>
 </html>
