--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             Charles Bao
         </h1>
         <div> </div>
-        <button onclick="buttonPressed(this)" value = "This is me in my Junior Year!">
+        <button class= "buttonclear" onclick="buttonPressed(this)" value = "This is me in my junior year of highschool!">
             <img id="imageCenter" src = Charles.jpg>
         </button>
         <p class="para center">
