--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img id="imageCenter" src = Charles.jpg>
         </button>
         <p class="para center">
-            Hi, my name is Charles Bao and this website will let you about me!
+            Hi, my name is Charles Bao and this website will let you know all about me!
         </p>
         <p class="center">
             <a href="about/index.html">About me</a>
