--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
     <h3 class = "black center">
         Relevant courses:
     </h3>
-    <ul class="black center">
+    <ul class="black">
         <li>Object Oriented Design and Implementation</li>
         <li>Foundations of Computer Science</li>
         <li>Computer Organization and Logic Design</li>
