--- a/about/index.html
+++ b/about/index.html
@@ -15,9 +15,9 @@
         Relevant courses:
     </h3>
     <ul class="black">
-        <li>Object Oriented Design and Implementation</li>
-        <li>Foundations of Computer Science</li>
-        <li>Computer Organization and Logic Design</li>
-        <li>Data Structures and Algorithms</li>
+        <li>Object Oriented Design and Implementation.</li>
+        <li>Foundations of Computer Science.</li>
+        <li>Computer Organization and Logic Design.</li>
+        <li>Data Structures and Algorithms.</li>
     </ul>
 </html>
