--- a/about/index.html
+++ b/about/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> About Me </title>
-        <link rel="stylesheet" href="../style/about.css">
-    </head>
-    <h1 class="black center">
-        About Me
-    </h1>
-    <h2 class = "black center"> Education</h2>
-    <p class="para center">
-        I'm currently in my second year of studying computer science at The University of California Santa Barbara.
-    </p>
-    <h3 class = "black center">
-        Relevant courses:
-    </h3>
-    <ul class="black">
-        <li>Object Oriented Design and Implementation.</li>
-        <li>Foundations of Computer Science.</li>
-        <li>Computer Organization and Logic Design.</li>
-        <li>Data Structures and Algorithms.</li>
-    </ul>
-    <form id="backbutton" action="../index.html">
-        <button id="backbutton" type="submit"> Home</button>
-    </form>
+    <body>
+        <form id="backbutton" action="../index.html">
+            <button id="backbutton" type="submit"> Home</button>
+        </form>
+        <head>
+            <title> About Me </title>
+            <link rel="stylesheet" href="../style/about.css">
+        </head>
+        <h1 class="black center">
+            About Me
+        </h1>
+        <h2 class = "black center"> Education</h2>
+        <p class="para center">
+            I'm currently in my second year of studying computer science at The University of California Santa Barbara.
+        </p>
+        <h3 class = "black center">
+            Relevant courses:
+        </h3>
+        <ul class="black">
+            <li>Object Oriented Design and Implementation.</li>
+            <li>Foundations of Computer Science.</li>
+            <li>Computer Organization and Logic Design.</li>
+            <li>Data Structures and Algorithms.</li>
+        </ul>
+        
+    </body>
     
 </html>
