--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <form id="backbutton" action="../index.html">
+        <form class="topleft" id="backbutton" action="../index.html">
             <button id="backbutton" type="submit"> Home</button>
         </form>
         <head>
