--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
         <h3 class = "black center">
             Relevant courses:
         </h3>
-        <ul class="black">
+        <ul class="black claslist">
             <li>Object Oriented Design and Implementation.</li>
             <li>Foundations of Computer Science.</li>
             <li>Computer Organization and Logic Design.</li>
