--- a/about/index.html
+++ b/about/index.html
@@ -18,8 +18,8 @@
         <h3 class = "black center">
             Relevant courses:
         </h3>
-        <ul class="black claslist">
-            <li>Object Oriented Design and Implementation.</li>
+        <ul class="black classlist">
+            <li class="classlist">Object Oriented Design and Implementation.</li>
             <li>Foundations of Computer Science.</li>
             <li>Computer Organization and Logic Design.</li>
             <li>Data Structures and Algorithms.</li>
